# Envoi-rs

./: Cargo.toml  Hosts.json  README.md
local_dependencies/tls_listener/: Cargo.toml
res/dirs/www/: index.html  robots.txt.save  style.css  sysinfo.json
res/tls/: privkey4.pem
res/tls/cloudflare-origin/: fullchain.pem  private.der  privkey.pem  public.der
res/tls/emby/: private.der  public.der
res/tls/old/: private.der  public.der
src/: config_loader.rs  main.rs  tls.rs  tls_cfg.rs
tls/: cert4.pem  fullchain4.pem  server_new.key
tls/cloudflare-origin/: private.pem  public.pem
tls/rustls-testing/: cert.pem  key.rsa
