[package]
name = "envoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.1", features = ["server", "tcp", "http1", "client", "stream"] }
once_cell = "1.19.0"
tls-listener = { version = "0.8.0", features = ["rustls","hyper-h1","tokio-net"] }
tokio = { version = "1.0", features = ["full","rt"] }
tokio-rustls = "0.24.0"
futures-util = "0.3.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

