[package]
name = "envoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.1", features = ["full", "server", "http1", "client"] }
once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["full","rt"] }
tokio-rustls = "0.25.0"
futures-util = "0.3.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
hyper-util = { version = "0.1.2", features = ["tokio", "server-auto","full"] }
http-body-util = "0.1.0"
bytes = "1.5.0"

tls_listener = { path = "./local_dependencies/tls_listener", features = ["rustls","rt"] }
rustls = { version = "0.22.2", features = ["ring","tls12"] }
rustls-native-certs = { version = "0.7", optional = true }
pki-types = { package = "rustls-pki-types", version = "1" }
tower-service = "0.3"
webpki-roots = { version = "0.26", optional = true }
http = "1"
rustls-pemfile = "2"